--- a/_includes/author-profile-custom-links.html
+++ b/_includes/author-profile-custom-links.html
@@ -5,3 +5,9 @@
     </a>
   </li>
 -->
+
+<!-- <li>
+  <a href="https://t.me/msurtsukov" itemprop="sameAs">
+    <i class="fab fa-telegram"></i> Telegram
+  </a>
+</li> -->
